[package]
edition = "2021"
name = "solana-async-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
futures-util = "0.3.21"
reqwest = {version = "0.11.10", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
solana-program = "1.10.8"
solana-sdk = "1.10.8"
solana-transaction-status = "1.10.8"
tokio = "1.0"
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
url = "2.2.2"

[dev-dependencies]
tokio = {version = "1.0", features = ["full"]}
