[package]
edition = "2021"
name = "solana-async-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4"
futures-util = "0.3.21"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
solana-program = "1.10.8"
solana-sdk = "1.10.8"
solana-transaction-status = "1.10.8"
tokio = {version = "1.0", features = ["full"]}
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
url = "2.2.2"
zstd = "0.11.1"

[dev-dependencies]
spl-token = "3.2.0"
